change playlist buffer, use websocket to update playlist, solve YT player overlapping
Former-commit-id: 7820222b6f31eae7c2467ee6b38fcf7478e19192 [formerly cd4d3859f883a33cf226f544e84e8fc01e42743e] [formerly 7c448609a9ae7cca1a8b880483752ccaae85f0b4 [formerly fe0effbcb4f10864d749c1e3363be4abcc38c97b]]
Former-commit-id: a032a9207623acd9573883dad49e58998a81e3f3 [formerly 4a00f7a241c98d2f87706d68d955a0f2898a7dcb]
Former-commit-id: 83148ed06576918784ce2f05155b89ca31cc182a

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -209,6 +209,11 @@ hr:after {
 	white-space: nowrap;
 }
 
+#playlist span {
+	height: 90px;
+	display: inline-block;
+}
+
 .about {
 	text-align: center;
 	max-width: 700px;
